Bootstrap alpha version compatibility

--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -3,6 +3,7 @@
 
 
 @import "vendors/bootstrap";
+@import "vendors/bootstrap-backwards-compatibility";
 
 @import "base/base";
 @import "base/typography";
