Clear, scss code organization

--- a/_dev/css/base/_base.scss
+++ b/_dev/css/base/_base.scss
@@ -46,3 +46,21 @@ input, textarea {
     }
   }
 }
+
+
+input[type=number] {
+  -moz-appearance:textfield;
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
+
+
+@include media-breakpoint-down(md) {
+  .container {
+    max-width: 100%;
+  }
+}
