social-block component

--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -16,6 +16,7 @@
 
 
 @import "components/breadcrumb";
+@import "components/block-social";
 @import "components/custom-checkbox";
 @import "components/custom-radio";
 @import "components/bootstrap-touchspin";
