--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -1,9 +1,7 @@
+
+@import "abstracts/bootstrap-variables"; // FILE INCLUDES '../vendors/bootstrap' AND '../vendors/bootstrap-backwards-compatibility' FILE STRUCTURE REQUIRED TO OVERRIDE BOOTSTRAP VARIABLES
 @import "abstracts/variables";
 @import "abstracts/mixins";
-
-
-@import "vendors/bootstrap";
-@import "vendors/bootstrap-backwards-compatibility";
 
 @import "base/base";
 @import "base/typography";
