--- a/_dev/css/components/footer.scss
+++ b/_dev/css/components/footer.scss
@@ -20,7 +20,7 @@
 .myaccount-title a,
 .block-contact-title {
   font-weight: 700;
-  font-size: $base-font-size;
+  font-size: $font-size-base;
 }
 
 #block_myaccount_infos {
