--- a/_dev/css/components/products.scss
+++ b/_dev/css/components/products.scss
@@ -540,7 +540,7 @@
     text-transform: uppercase;
     color: white;
     margin-top: $small-space;
-    font-size: $base-font-size;
+    font-size: $font-size-base;
 
     &.online-only {
       position: absolute;
