--- a/_dev/css/components/stores.scss
+++ b/_dev/css/components/stores.scss
@@ -33,7 +33,7 @@
         }
       }
       .store-description{
-        font-size: $base-font-size;
+        font-size: $font-size-base;
       }
     }
     .store-item-footer {
