--- a/_dev/css/base/_base.scss
+++ b/_dev/css/base/_base.scss
@@ -10,7 +10,7 @@ html {
 body {
   direction: ltr;
   font-family: 'Roboto', sans-serif;
-  font-size: $base-font-size;
+  font-size: $font-size-base;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $gray-darker;
