--- a/_dev/css/components/errors.scss
+++ b/_dev/css/components/errors.scss
@@ -17,7 +17,7 @@
     max-width: 570px;
     margin: 0 auto;
     h4 {
-      font-size: $base-font-size;
+      font-size: $font-size-base;
       font-weight: 700;
       margin: 0.5rem 0 1rem;
     }
