--- a/_dev/css/base/_typography.scss
+++ b/_dev/css/base/_typography.scss
@@ -1,5 +1,4 @@
 p {
-    font-size: 0.9375rem;
     color: $gray;
     font-weight: 400;
 }
@@ -19,13 +18,8 @@ p {
 label ,.label {
     color: $gray-darker;
     text-align: right;
-    font-size: 0.875rem;
 }
 
 small.label, small.value {
-    font-size: 0.8125rem;
-}
-
-.text-muted {
-    font-size: 0.875rem;
+    font-size: $font-size-sm;
 }
