--- a/_dev/css/components/_bootstrap-touchspin.scss
+++ b/_dev/css/components/_bootstrap-touchspin.scss
@@ -1,25 +1,25 @@
 .bootstrap-touchspin {
-  width: auto;
   display: inline-block;
+  width: auto;
   input {
     &:focus {
       outline: none;
     }
     &.form-control,
     &.input-group {
-      color: $gray-darker;
-      background-color: white;
+      float: left;
+      width: 3rem;
       height: $input-height;
       padding: 0.175rem 0.5rem;
-      width: 3rem;
+      color: $gray-darker;
+      background-color: #fff;
       border: $input-btn-border-width solid $input-border-color;
-      float: left;
     }
   }
   .input-group-btn-vertical {
-    color: $gray-darker;
-    width: auto;
     float: left;
+    width: auto;
+    color: $gray-darker;
     .bootstrap-touchspin-up {
       border-radius: 0;
     }
