--- a/_dev/css/base/_fonts.scss
+++ b/_dev/css/base/_fonts.scss
@@ -1,43 +1,35 @@
 /* roboto-regular - latin-ext_latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Roboto'), local('Roboto-Regular'),
-       url('./fonts/roboto-v20-latin-ext_latin-regular.woff2') format('woff2'),
-       url('./fonts/roboto-v20-latin-ext_latin-regular.woff') format('woff');
+  src: local("Roboto"), local("Roboto-Regular"), url("./fonts/roboto-v20-latin-ext_latin-regular.woff2") format("woff2"), url("./fonts/roboto-v20-latin-ext_latin-regular.woff") format("woff");
 }
 
 /* roboto-500 - latin-ext_latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local('Roboto Medium'), local('Roboto-Medium'),
-       url('./fonts/roboto-v20-latin-ext_latin-500.woff2') format('woff2'),
-       url('./fonts/roboto-v20-latin-ext_latin-500.woff') format('woff');
+  src: local("Roboto Medium"), local("Roboto-Medium"), url("./fonts/roboto-v20-latin-ext_latin-500.woff2") format("woff2"), url("./fonts/roboto-v20-latin-ext_latin-500.woff") format("woff");
 }
 
 /* roboto-italic - latin-ext_latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: local('Roboto Italic'), local('Roboto-Italic'),
-       url('./fonts/roboto-v20-latin-ext_latin-italic.woff2') format('woff2'),
-       url('./fonts/roboto-v20-latin-ext_latin-italic.woff') format('woff');
+  src: local("Roboto Italic"), local("Roboto-Italic"), url("./fonts/roboto-v20-latin-ext_latin-italic.woff2") format("woff2"), url("./fonts/roboto-v20-latin-ext_latin-italic.woff") format("woff");
 }
 
 /* roboto-700 - latin-ext_latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local('Roboto Bold'), local('Roboto-Bold'),
-       url('./fonts/roboto-v20-latin-ext_latin-700.woff2') format('woff2'),
-       url('./fonts/roboto-v20-latin-ext_latin-700.woff') format('woff');
+  src: local("Roboto Bold"), local("Roboto-Bold"), url("./fonts/roboto-v20-latin-ext_latin-700.woff2") format("woff2"), url("./fonts/roboto-v20-latin-ext_latin-700.woff") format("woff");
 }
