--- a/_dev/css/components/_alert.scss
+++ b/_dev/css/components/_alert.scss
@@ -5,26 +5,25 @@
 
 .alert-warning {
   .alert-text {
-    font-size: 0.9375rem;
     padding-top: $small-space;
+    font-size: 0.9375rem;
   }
   .alert-link {
-    border-radius: 2px;
-    border-width: 2px;
-    margin-left: $small-space;
     padding: $extra-small-space $medium-space;
-    font-weight: 600;
+    margin-left: $small-space;
     font-size: 0.8125rem;
+    font-weight: 600;
     color: $btn-tertiary-color;
+    border-width: 2px;
+    border-radius: 2px;
   }
   ul li:last-child .alert-link {
-    color: white;
+    color: #fff;
   }
   .warning-buttons {
     margin-top: $extra-small-space;
   }
 }
-
 
 
 .ps-alert-error {
@@ -34,38 +33,38 @@
 .ps-alert-error,
 .ps-alert-success {
   .item {
-    align-items: center;
-    border: 2px $brand-danger solid;
     display: flex;
-    background-color: $brand-danger;
+    align-items: center;
     margin-bottom: 1rem;
+    background-color: $brand-danger;
+    border: 2px $brand-danger solid;
 
     i {
-      border: 15px $brand-danger solid;
       display: flex;
+      border: 15px $brand-danger solid;
 
       svg {
-        background-color: $brand-danger;
         width: 24px;
         height: 24px;
+        background-color: $brand-danger;
       }
     }
 
     p {
-      background-color: $body-bg;
-      margin: 0;
-      padding: 18px 20px 18px 20px;
       width: 100%;
+      padding: 18px 20px;
+      margin: 0;
+      background-color: $body-bg;
     }
   }
 }
 
 .ps-alert-success {
-  padding: 0.25rem 0.25rem 2.75rem 0.25rem;
+  padding: 0.25rem 0.25rem 2.75rem;
 
   .item {
-    border-color: $brand-success;
     background-color: $brand-success;
+    border-color: $brand-success;
 
     i {
       border-color: $brand-success;
