--- a/_dev/css/components/_custom-checkbox.scss
+++ b/_dev/css/components/_custom-checkbox.scss
@@ -1,12 +1,12 @@
 .color,
 .custom-checkbox input[type="checkbox"] + span.color {
+  display: inline-block;
   width: 1.25rem;
   height: 1.25rem;
-  display: inline-block;
   margin: 0.3125rem;
-  border: 1px solid rgba(0,0,0,0.05);
   cursor: pointer;
   background-size: contain;
+  border: 1px solid rgba(0, 0, 0, 0.05);
   &.active,
   &:hover {
     border: 2px solid $gray-darker;
@@ -16,15 +16,15 @@
 .custom-checkbox {
   position: relative;
   input[type="checkbox"] {
-    margin-top: 0.25rem;
-    opacity: 0;
-    cursor: pointer;
     position: absolute;
+    margin-top: 0.25rem;
+    cursor: pointer;
+    opacity: 0;
     + span {
-      margin-right: 3px;
       display: inline-block;
       width: 0.9375rem;
       height: 0.9375rem;
+      margin-right: 3px;
       vertical-align: middle;
       cursor: pointer;
       border: 2px $gray-darker solid;
