--- a/_dev/css/components/cart.scss
+++ b/_dev/css/components/cart.scss
@@ -10,8 +10,8 @@
 .card-block {
   padding: 1.25rem 1.25rem .5rem;
   &.checkout {
-    padding-bottom: 1.75rem;
     padding-top: 0;
+    padding-bottom: 1.75rem;
     margin-top: 1rem;
   }
 
@@ -21,14 +21,14 @@
       padding: .5rem .2rem 0;
 
       &:last-child {
-        margin-bottom: 0
+        margin-bottom: 0;
       }
       &.cart-total {
-        background-color: $gray-light;
         padding: .5rem;
+        background-color: $gray-light;
         .label,
         .value {
-          font-weight: bold;
+          font-weight: 700;
         }
         .label {
           font-size: 1rem;
@@ -39,9 +39,9 @@
       }
       span {
         &.sub {
-          text-align: left;
-          font-size: .88rem;
           float: none;
+          font-size: .88rem;
+          text-align: left;
         }
       }
     }
@@ -49,26 +49,27 @@
 }
 
 .cart-summary-line {
-  @include clearfix;
-  clear: both;
+  @include clearfix ();
   margin-bottom: .315rem;
+  clear: both;
   .label {
     padding-left: 0;
-    font-weight: normal;
-    white-space: inherit;
+    font-weight: 400;
     color: $gray-dark;
+    white-space: inherit;
   }
   .value {
-    color: $gray-darker;
     float: right;
+    color: $gray-darker;
   }
   &.cart-summary-subtotals {
     .label,
     .value {
-      font-weight: normal;
+      font-weight: 400;
     }
   }
 }
+
 /** CART BODY **/
 .cart-grid-body {
   a.label {
@@ -87,13 +88,14 @@
   }
   margin-bottom: 0.75rem;
 }
+
 /** CART RIGHT **/
 .cart-grid-right {
   .promo-discounts {
-    margin-bottom: 0;
-    text-align: center;
     padding-top: .5rem;
     padding-bottom: .5rem;
+    margin-bottom: 0;
+    text-align: center;
 
     .cart-summary-line {
       .label {
@@ -127,22 +129,22 @@
     padding: 1rem;
     .alert-danger {
       position: relative;
-      margin-top: 1.25rem;
-      background: $brand-danger;
-      color: white;
       display: none;
+      margin-top: 1.25rem;
+      color: #fff;
+      background: $brand-danger;
       &::after {
+        position: absolute;
         bottom: 100%;
         left: 10%;
-        border: solid transparent;
-        content: " ";
-        height: 0;
         width: 0;
-        position: absolute;
-        pointer-events: none;
-        border-bottom-color:  $brand-danger;
-        border-width: 10px;
+        height: 0;
         margin-left: -10px;
+        pointer-events: none;
+        content: " ";
+        border: solid transparent;
+        border-width: 10px;
+        border-bottom-color: $brand-danger;
       }
     }
     form {
@@ -150,12 +152,12 @@
     }
   }
   .promo-input {
-    color: $gray-darker;
-    border: $gray 1px solid;
-    height: 2.5rem;
-    text-indent: 0.625rem;
     width: 50%;
+    height: 2.5rem;
     margin-right: -.24rem;
+    color: $gray-darker;
+    text-indent: 0.625rem;
+    border: $gray 1px solid;
     + button {
       margin-top: -4px;
       margin-left: -1px;
@@ -165,19 +167,19 @@
   }
   .cart-summary-line .label,
   .promo-name {
-    color: $brand-warning;
-    font-weight: 600;
     margin-bottom: 0;
+    font-weight: 600;
+    color: $brand-warning;
     a {
-      font-weight: normal;
-      color: $gray-darker;
       display: inline-block;
+      font-weight: 400;
+      color: $gray-darker;
     }
   }
   .promo-name {
     .cart-summary-line {
       .label {
-        font-weight: normal;
+        font-weight: 400;
         color: $gray-dark;
       }
       span {
@@ -187,16 +189,16 @@
   }
   .promo-code-button {
     display: block;
-    text-align: center;
     padding: 0 0 1rem;
+    text-align: center;
 
     &.with-discounts {
       display: none;
     }
 
     &.cancel-promo {
-      color: $brand-primary;
       margin-bottom: 0;
+      color: $brand-primary;
       &[aria-expanded="true"] {
         display: block;
         padding: 0;
@@ -213,12 +215,14 @@
     margin-bottom: 0;
   }
 }
+
 /** CONTENT LEFT **/
 .product-line-grid-left {
   img {
     max-width: 100%;
   }
 }
+
 /** CONTENT BODY **/
 .product-line-grid-body {
   > .product-line-info {
@@ -229,7 +233,7 @@
       white-space: inherit;
     }
     > .out-of-stock {
-      color: red;
+      color: $brand-danger;
     }
     > .available {
       color: $brand-success;
@@ -241,16 +245,17 @@
     }
   }
 }
+
 /** CONTENT LEFT **/
 .product-line-grid-right {
   .cart-line-product-actions,
   .product-price {
-    color: $gray-darker;
     line-height: 36px;
+    color: $gray-darker;
     .remove-from-cart {
-      color: $gray-darker;
       display: inline-block;
       margin-top: 0.3125rem;
+      color: $gray-darker;
     }
   }
 }
@@ -277,12 +282,9 @@
       padding: 0;
     }
     .no-items {
-      padding: 1rem;
       display: inline-block;
+      padding: 1rem;
     }
-  }
-  .product-line-grid-left {
-    padding-right: 0 !important;
   }
 }
 
