--- a/_dev/css/components/custom-text.scss
+++ b/_dev/css/components/custom-text.scss
@@ -1,22 +1,22 @@
 #custom-text {
-  background: white;
-  border-radius: 2px;
+  padding: 3.125rem;
   margin-bottom: 1.5rem;
-  padding: 3.125rem 3.125rem;
   text-align: center;
+  background: #fff;
+  border-radius: 2px;
   h2 {
-    text-transform: uppercase;
-    color: $gray-darker;
     font-size: 1.563rem;
     font-weight: 700;
+    color: $gray-darker;
+    text-transform: uppercase;
   }
   p {
-    color: $gray-darker;
-    font-weight: 400;
     font-size: 1.1em;
+    font-weight: 400;
+    color: $gray-darker;
     .dark {
-      color: $gray;
       font-weight: 400;
+      color: $gray;
     }
   }
   img {
@@ -25,9 +25,9 @@
   }
 }
 .page-content.page-cms{
-  background: white;
   padding: 1.25rem;
   text-align: justify;
+  background: #fff;
   .cms-box{
     img{
       max-width: 100%;
