--- a/_dev/css/components/drop-down.scss
+++ b/_dev/css/components/drop-down.scss
@@ -1,5 +1,5 @@
 .dropdown{
-  color:$gray;
+  color: $gray;
   &:hover .expand-more{
     color: $brand-primary;
   }
@@ -17,17 +17,18 @@
   }
 
   select {
-    -moz-appearance: none;
+    color: $gray-darker;
+    background: #fff;
     border: 0 none;
     outline: 0 none;
-    color: $gray-darker;
-    background: white;
+    appearance: none;
   }
 }
 
-.dropdown-item:focus, .dropdown-item:hover {
-  background: none;
-  text-decoration: none;
+.dropdown-item:focus,
+.dropdown-item:hover {
   color: $brand-primary;
+  text-decoration: none;
+  background: none;
 }
 
