--- a/_dev/css/components/errors.scss
+++ b/_dev/css/components/errors.scss
@@ -9,17 +9,17 @@
     }
   }
   .page-not-found {
-    @include box-shadow;
-    background: white;
+    @include box-shadow ();
+    max-width: 570px;
     padding: 1rem;
+    margin: 0 auto;
     font-size: $font-size-sm;
     color: $gray;
-    max-width: 570px;
-    margin: 0 auto;
+    background: #fff;
     h4 {
+      margin: 0.5rem 0 1rem;
       font-size: $font-size-base;
       font-weight: 700;
-      margin: 0.5rem 0 1rem;
     }
     .search-widget {
       float: none;
