--- a/_dev/css/components/products.scss
+++ b/_dev/css/components/products.scss
@@ -6,8 +6,8 @@
   }
 }
 .product-price {
-  color: $brand-primary;
   display: inline-block;
+  color: $brand-primary;
 }
 #product-description-short {
   color: $gray-darker;
@@ -18,8 +18,8 @@
 
   .manufacturer-logo {
     height: 3.125rem;
-    border: none;
     margin-bottom: 1rem;
+    border: none;
   }
 
   .product-description {
@@ -29,18 +29,18 @@
     }
 
     ul {
+      padding-left: .75rem;
       list-style: inherit;
       list-style-position: inside;
-      padding-left: .75rem;
     }
   }
 }
 .input-color {
   position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 1.25rem;
   width: 1.25rem;
+  height: 1.25rem;
+  cursor: pointer;
+  opacity: 0;
 }
 .input-container {
   position: relative;
@@ -48,10 +48,10 @@
 .input-radio {
   position: absolute;
   top: 0;
-  cursor: pointer;
-  opacity: 0;
   width: 100%;
   height: 100%;
+  cursor: pointer;
+  opacity: 0;
 }
 .input-color,
 .input-radio {
@@ -61,46 +61,46 @@
   }
 }
 .radio-label {
-  @include box-shadow;
-  background: white;
+  @include box-shadow ();
   display: inline-block;
   padding: 0.125rem $small-space;
   font-weight: 600;
-  border: 2px solid white;
+  background: #fff;
+  border: 2px solid #fff;
 }
 .product-actions {
   .control-label {
-    width: 100%;
-    margin-bottom: 0.375rem;
     display: block;
     width: 100%;
+    margin-bottom: 0.375rem;
   }
 }
 .product-quantity {
   display: flex;
-  .qty, .add {
-    float: left;
+  .qty,
+  .add {
     display: inline-flex;
+    float: left;
     margin-bottom: 0.5rem;
   }
   .qty {
     margin-right: 0.4rem;
   }
   #quantity_wanted {
-    color: $gray-darker;
-    background-color: white;
+    width: 3rem;
     height: 2.75rem;
     padding: 0.175rem 0.5rem;
-    width: 3rem;
+    color: $gray-darker;
+    background-color: #fff;
   }
   .input-group-btn-vertical {
     width: auto;
     .btn {
       padding: 0.5rem 0.6875rem;
       i {
-        font-size: 1rem;
         top: 0.125rem;
         left: 0.1875rem;
+        font-size: 1rem;
       }
     }
   }
@@ -111,21 +111,21 @@
 .product-discounts {
   margin-bottom: 1.5rem;
   > .product-discounts-title {
-    font-weight: normal;
     font-size: $font-size-sm;
+    font-weight: 400;
   }
   > .table-product-discounts {
     thead tr th {
       width: 33%;
       padding: $small-space $medium-space;
-      background: white;
-      border: 0.3125rem $gray-light solid;
       text-align: center;
+      background: #fff;
+      border: 0.3125rem $gray-light solid;
     }
     tbody tr {
       background: $gray-lighter;
       &:nth-of-type(even) {
-        background: white;
+        background: #fff;
       }
       td {
         padding: $small-space $medium-space;
@@ -149,8 +149,8 @@
       padding: 0 0 0 2px;
 
       &::before {
-        content: "-";
         padding: 0 2px 0 0;
+        content: "-";
       }
     }
   }
@@ -158,35 +158,36 @@
 .product-discount {
   color: $gray;
   .regular-price {
-    text-decoration: line-through;
-    font-weight: normal;
     margin-right: $small-space;
+    font-weight: 400;
+    text-decoration: line-through;
   }
 }
 .has-discount {
-  &.product-price, p {
+  &.product-price,
+  p {
     color: $brand-secondary;
   }
   .discount {
-    background: $brand-secondary;
-    color: white;
-    font-weight: 600;
-    padding: 0.3125rem $small-space;
-    font-size: $font-size-base;
-    margin-left: $small-space;
-    text-transform: uppercase;
     display: inline-block;
+    padding: 0.3125rem $small-space;
+    margin-left: $small-space;
+    font-size: $font-size-base;
+    font-weight: 600;
+    color: #fff;
+    text-transform: uppercase;
+    background: $brand-secondary;
   }
 }
 .product-unit-price {
-  font-size: $font-size-xs;
   margin-bottom: 0;
+  font-size: $font-size-xs;
 }
 .tabs {
-  @include box-shadow;
-  margin-top: 2rem;
-  background: white;
+  @include box-shadow ();
   padding: $medium-space $large-space;
+  margin-top: 2rem;
+  background: #fff;
   .tab-pane {
     padding-top: $medium-space;
   }
@@ -197,9 +198,9 @@
       color: $gray;
       border: 0 solid transparent;
       &.active {
+        color: $brand-primary;
         border: none;
         border-bottom: $brand-primary 3px solid;
-        color: $brand-primary;
       }
       &:hover {
         border: none;
@@ -213,26 +214,26 @@
   }
 }
 .product-cover {
-  margin-bottom: $medium-space;
   position: relative;
+  margin-bottom: $medium-space;
   img {
-    @include box-shadow;
-    background: white;
+    @include box-shadow ();
+    background: #fff;
   }
   .layer {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
-    background: #000;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-    background: rgba(0,0,0,0.6);
     text-align: center;
     cursor: pointer;
+    background: #000;
+    background: rgba(0, 0, 0, 0.6);
+    opacity: 0;
     @include transition(opacity .7s ease-in-out);
     &:hover {
       opacity: 1;
@@ -245,19 +246,19 @@
 }
 #product-modal {
   .modal-content {
+    padding: 0;
     background: transparent;
     border: none;
-    padding: 0;
     .modal-body {
       display: flex;
       margin-left: -30%;
       .product-cover-modal {
-        background: white;
+        background: #fff;
       }
       .image-caption {
-        background: white;
         width: 800px;
         padding: 0.625rem 1.25rem;
+        background: #fff;
         border-top: $gray-light 1px solid;
         p {
           margin-bottom: 0;
@@ -268,10 +269,10 @@
       }
       .mask {
         position: relative;
-        overflow: hidden;
+        z-index: 1;
         max-height: 49.38rem;
         margin-top: 2.188rem;
-        z-index: 1;
+        overflow: hidden;
         &.nomargin {
           margin-top: 0;
         }
@@ -281,21 +282,22 @@
         img {
           width: 9.25rem;
           cursor: pointer;
-          background: white;
+          background: #fff;
           &:hover {
             border: $brand-primary 3px solid;
           }
         }
       }
       .arrows {
-        height: 100%;
-        width: 100%;
-        text-align: center;
         position: absolute;
         top: 0;
-        color: white;
         right: $large-space;
         z-index: 0;
+        width: 100%;
+        height: 100%;
+        color: #fff;
+        text-align: center;
+        cursor: pointer;
         .arrow-up {
           position: absolute;
           top: -2rem;
@@ -306,10 +308,9 @@
           bottom: -2rem;
         }
         i {
-          font-size: 6.25rem;
           display: inline;
+          font-size: 6.25rem;
         }
-        cursor: pointer;
       }
     }
   }
@@ -317,14 +318,14 @@
 #blockcart-modal {
   color: $gray-darker;
   .modal-header {
-    background: white;
+    background: #fff;
     .close {
       opacity: 1;
     }
   }
   .modal-body {
-    background: $btn-warning-color;
     padding: 3.125rem 1.875rem;
+    background: $btn-warning-color;
     .divide-right span {
       display: inline-block;
       margin-bottom: 0.3125rem;
@@ -336,31 +337,31 @@
     }
   }
   .modal-dialog {
-    max-width: 1140px;
     width: 100%;
+    max-width: 1140px;
   }
   .product-image {
+    display: block;
     width: 100%;
     max-width: 9.375rem;
-    display: block;
     margin: 0 0 0 auto;
   }
   .modal-title {
-    color: #353943;
     font-size: 1rem;
     font-weight: 400;
+    color: #353943;
   }
   .product-name {
-    color: $brand-primary;
     font-size: 1.125rem;
+    color: $brand-primary;
 
     @include media-breakpoint-down(sm) {
       padding: 0 .5rem;
     }
   }
   .product-price {
-    color: $gray-dark;
     display: block;
+    color: $gray-dark;
     @include media-breakpoint-down(sm) {
       padding: 0 .5rem;
     }
@@ -368,19 +369,22 @@
 
   .cart-content {
     padding-left: $extra-large-space;
+    .btn {
+      margin-bottom: $small-space;
+    }
     p {
-      color: $gray-dark;
       display: flex;
       justify-content: space-between;
       padding: 0 .5rem;
+      color: $gray-dark;
       &.product-total {
-        background-color: $gray-light;
         padding: .5rem;
+        background-color: $gray-light;
       }
       &.cart-products-count {
         font-size: 1rem;
-        color: $btn-tertiary-color;
         font-weight: 600;
+        color: $btn-tertiary-color;
       }
       &.product-tax {
         display: inherit;
@@ -409,9 +413,9 @@
   > li.thumb-container {
     display: inline;
     > .thumb {
-      @include box-shadow;
-      cursor: pointer;
+      @include box-shadow ();
       margin-bottom: $small-space;
+      cursor: pointer;
       .images-container & {
         margin-right: 0.8125rem;
       }
@@ -425,8 +429,8 @@
 #main {
   .images-container {
     .js-qv-mask {
-      white-space: nowrap;
       overflow: hidden;
+      white-space: nowrap;
       &.scroll {
         width: calc(100% - 60px);
         margin: 0 auto;
@@ -454,8 +458,8 @@
   }
 }
 #product-availability {
-  margin-top: 0.625rem;
   display: inline-block;
+  margin-top: 0.625rem;
   font-weight: 700;
   .product-available {
     color: $brand-success;
@@ -470,8 +474,8 @@
 #product-details {
   .label {
     font-size: $font-size-base;
+    font-weight: 700;
     color: $gray-darker;
-    font-weight: bold;
   }
 }
 .product-features {
@@ -484,17 +488,17 @@
     dd.value,
     dt.name {
       flex: 1 0 40%;
-      font-weight: normal;
-      background: $gray-light;
+      min-height: 2.5rem;
       padding: $small-space;
       margin-right: $small-space;
-      min-height: 2.5rem;
+      margin-bottom: .5rem;
+      font-weight: 400;
+      text-transform: capitalize;
       word-break: normal;
+      background: $gray-light;
       &:nth-of-type(even) {
         background: $gray-lighter;
-    }
-    text-transform: capitalize;
-    margin-bottom: .5rem;
+      }
     }
   }
 }
@@ -502,53 +506,47 @@
   > .product-variants-item {
     margin: $medium-space 0;
     select {
-      background-color: white;
       width: auto;
       padding-right: 1.875rem;
+      background-color: #fff;
     }
     ul li {
       margin-right: $small-space;
     }
     .color {
-      margin-left: 0;
       margin-top: 0;
+      margin-left: 0;
     }
   }
 }
 .product-flags {
-  pointer-events: none;
   position: absolute;
-  width: 100%;
   top: 0;
   left: 0;
+  z-index: 2;
   display: flex;
   flex-direction: column;
-  z-index: 2;
+  width: 100%;
+  pointer-events: none;
 
   li.product-flag {
-    pointer-events: auto;
     width: fit-content;
-    background: $brand-primary;
-    font-weight: 700;
     padding: 0.3125rem 0.4375rem;
-    text-transform: uppercase;
-    color: white;
     margin-top: $small-space;
     font-size: $font-size-base;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    pointer-events: auto;
+    background: $brand-primary;
 
     &.online-only {
       position: absolute;
       top: 25rem;
       right: 0;
       z-index: 1;
-      font-size: $font-size-xs;
       margin-top: 0;
-      &::before{
-        content:"\E30A";
-        font-family: 'Material Icons';
-        vertical-align: middle;
-        margin: 0.3125rem;
-      }
+      font-size: $font-size-xs;
     }
     &.discount-percentage,
     &.discount-amount,
@@ -557,10 +555,9 @@
     }
     &.on-sale {
       order: -1;
-      background: $brand-secondary;
       width: 100%;
       text-align: center;
-      margin-top: 0 !important;
+      background: $brand-secondary;
     }
   }
 }
@@ -572,26 +569,26 @@
     margin: $medium-space 0;
   }
   .product-message {
-    background: $gray-light;
-    border: none;
     width: 100%;
     height: 3.125rem;
-    resize: none;
     padding: 0.625rem;
+    resize: none;
+    background: $gray-light;
+    border: none;
     &:focus {
-      background-color: white;
+      background-color: #fff;
       outline: 0.1875rem solid $brand-primary;
     }
   }
   .file-input {
-    width: 100%;
-    opacity: 0;
+    position: absolute;
     left: 0;
     z-index: 1;
-    cursor: pointer;
+    width: 100%;
     height: 2.625rem;
     overflow: hidden;
-    position: absolute;
+    cursor: pointer;
+    opacity: 0;
   }
 
   .customization-message{
@@ -599,19 +596,19 @@
   }
   .custom-file {
     position: relative;
-    background: $gray-light;
+    display: block;
     width: 100%;
     height: 2.625rem;
-    line-height: 2.625rem;
-    text-indent: 0.625rem;
-    display: block;
-    color: $gray;
     margin-top: $medium-space;
+    line-height: 2.625rem;
+    color: $gray;
+    text-indent: 0.625rem;
+    background: $gray-light;
     button {
-      z-index: 0;
       position: absolute;
-      right: 0;
       top: 0;
+      right: 0;
+      z-index: 0;
     }
   }
   small {
@@ -629,8 +626,8 @@
       color: $gray;
     }
     .pack-product-quantity {
-      border-left: $gray-light 2px solid;
       padding-left: $small-space;
+      border-left: $gray-light 2px solid;
     }
     .pack-product-name,
     .pack-product-price,
@@ -644,32 +641,32 @@
   margin-top: $medium-space;
 }
 .social-sharing {
-  width: 100%;
   display: flex;
   align-items: center;
+  width: 100%;
   margin-top: 1.5rem;
   ul {
     margin-bottom: 0;
   }
   li {
-    height: 2.5rem;
-    width: 2.5rem;
-    border-radius: 50%;
     display: inline-block;
-    background-color: white;
-    background-repeat: no-repeat;
-    background-size: 2rem 2rem;
-    background-position: 0.25rem 0.25rem;
-    cursor: pointer;
+    width: 2.5rem;
+    height: 2.5rem;
     margin-left: 0.5rem;
+    cursor: pointer;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: 0.25rem 0.25rem;
+    background-size: 2rem 2rem;
+    border-radius: 50%;
     @include transition(all .2s ease-in);
     a {
       display: block;
       width: 100%;
       height: 100%;
-      white-space: nowrap;
-      text-indent: 100%;
       overflow: hidden;
+      text-indent: 100%;
+      white-space: nowrap;
       &:hover {
         color: transparent;
       }
@@ -682,11 +679,7 @@
     color: $gray;
   }
 }
-#blockcart-modal .cart-content {
-  .btn {
-    margin-bottom: $small-space;
-  }
-}
+
 @include media-breakpoint-down(md) {
   .product-cover {
     img {
