--- a/_dev/css/abstracts/_bootstrap-variables.scss
+++ b/_dev/css/abstracts/_bootstrap-variables.scss
@@ -1,6 +1,3 @@
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
 
 // Variables
 //
@@ -81,7 +78,7 @@ $theme-colors: map-merge(
 // variables. Mostly focused on spacing.
 // You can add more entries to the $spacers map, should you need more variation.
 
-$spacer: 1rem;
+$spacer: rem(10px);
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $spacers: (
@@ -102,21 +99,11 @@ $body-bg:                   $white;
 $body-color:                $gray-900;
 
 
-// Links
-//
-// Style anchor elements.
-
-$link-color:                              theme-color("primary");
-$link-decoration:                         none;
-$link-hover-color:                        theme-color("primary");
-$link-hover-decoration:                   none;
-// Darken percentage for links with `.text-*` class (e.g. `.text-success`)
-
 // Paragraphs
 //
 // Style p element.
 
-$paragraph-margin-bottom:   2rem;
+$paragraph-margin-bottom:   rem(20px);
 
 
 // Grid columns
@@ -124,7 +111,7 @@ $paragraph-margin-bottom:   2rem;
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns:                12;
-$grid-gutter-width:           3rem;
+$grid-gutter-width:           rem(20px);
 $grid-row-columns:            6;
 
 $border-width:                2px;
@@ -159,7 +146,7 @@ $h4-font-size:                $font-size-base * 1.25;
 $h5-font-size:                $font-size-base * 1.125;
 $h6-font-size:                $font-size-base;
 
-$headings-margin-bottom:      $spacer;
+$headings-margin-bottom:      map-get($spacers, 2);
 $headings-font-weight:        $font-weight-bold;
 $headings-line-height:        1.2;
 
@@ -175,61 +162,3 @@ $display4-weight:             400;
 
 
 $text-muted:                  $gray-600;
-
-
-// Tables
-//
-// Customizes the `.table` component with basic values, each used across all table variations.
-
-$table-cell-padding:          map-get($spacers, 2);
-$table-cell-padding-sm:       map-get($spacers, 1);
-
-
-// Buttons + Forms
-//
-// Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
-
-$input-btn-padding-y:         map-get($spacers, 1);
-$input-btn-padding-x:         map-get($spacers, 2);
-$input-btn-font-size:         $font-size-base;
-
-$input-btn-focus-width:       .1rem;
-
-$input-btn-padding-y-sm:      .4rem;
-$input-btn-padding-x-sm:      map-get($spacers, 1);
-$input-btn-font-size-sm:      $font-size-sm;
-$input-btn-line-height-sm:    $line-height-sm;
-
-$input-btn-padding-y-lg:      map-get($spacers, 2);
-$input-btn-padding-x-lg:      map-get($spacers, 3);
-$input-btn-font-size-lg:      $font-size-lg;
-$input-btn-line-height-lg:    $line-height-lg;
-
-$input-btn-border-width:      $border-width;
-
-
-// Buttons
-//
-// For each of Bootstrap's buttons, define text, background, and border color.
-
-
-// Buttons
-//
-// For each of Bootstrap's buttons, define text, background, and border color.
-
-$btn-padding-y:               $input-btn-padding-y;
-$btn-padding-x:               $input-btn-padding-x;
-$btn-font-family:             $input-btn-font-family;
-$btn-font-size:               $input-btn-font-size;
-$btn-line-height:             $input-btn-line-height;
-$btn-white-space:             normal;
-
-$btn-padding-y-sm:            $input-btn-padding-y-sm;
-$btn-padding-x-sm:            $input-btn-padding-x-sm;
-$btn-font-size-sm:            $input-btn-font-size-sm;
-$btn-line-height-sm:          $input-btn-line-height-sm;
-
-$btn-padding-y-lg:            $input-btn-padding-y-lg;
-$btn-padding-x-lg:            $input-btn-padding-x-lg;
-$btn-font-size-lg:            $input-btn-font-size-lg;
-$btn-line-height-lg:          $input-btn-line-height-lg;
