--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -1,9 +1,14 @@
-@import "abstracts/bootstrap-variables";
-@import "vendors/bootstrap";
-@import "vendors/bootstrap-backwards-compatibility";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
 
+@import "abstracts/functions";
 @import "abstracts/variables";
 @import "abstracts/mixins";
+@import "abstracts/bootstrap-variables";
+
+@import "vendors/bootstrap";
+@import "vendors/bootstrap-backwards-compatibility";
 
 @import "base/base";
 @import "base/typography";
