--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -47,3 +47,7 @@
 @import "components/sitemap";
 @import "components/newsletter";
 @import "components/brands";
+
+@import "components/product-miniature";
+@import "components/product-flags";
+@import "components/price";
