--- a/_dev/css/abstracts/variables/bootstrap/_index.scss
+++ b/_dev/css/abstracts/variables/bootstrap/_index.scss
@@ -1,3 +1,4 @@
+@import "options";
 @import "colors";
 @import "spacer";
 @import "typography";
@@ -5,3 +6,4 @@
 @import "card";
 @import "components";
 @import "commons";
+@import "rfs";
