--- a/_dev/css/abstracts/variables/bootstrap/_typography.scss
+++ b/_dev/css/abstracts/variables/bootstrap/_typography.scss
@@ -1,5 +1,5 @@
 
-$font-size-base:              rem-calc(14px);
+$font-size-base:              rem-calc(16px);
 $font-size-lg:                $font-size-base * 1.25;
 $font-size-sm:                $font-size-base * .875;
 $font-size-xs:                $font-size-base * .6875;
@@ -15,7 +15,7 @@ $h2-font-size:                $font-size-base * 1.75;
 $h3-font-size:                $font-size-base * 1.5;
 $h4-font-size:                $font-size-base * 1.25;
 $h5-font-size:                $font-size-base * 1.125;
-$h6-font-size:                $font-size-base;
+$h6-font-size:                $font-size-base * 1.125;
 
 $headings-margin-bottom:      map-get($spacers, 2);
 $headings-font-weight:        $font-weight-bold;
@@ -34,3 +34,8 @@ $display4-weight:             400;
 $text-muted:                  $gray-500;
 
 $paragraph-margin-bottom:   rem-calc(20px);
+
+$headings-margin-bottom: rem-calc(20px);
+$headings-font-weight: 700;
+$headings-line-height: 1.2;
+$headings-color: $gray-900;
