--- a/_dev/css/theme/override/bootstrap/_list-group.scss
+++ b/_dev/css/theme/override/bootstrap/_list-group.scss
@@ -14,6 +14,10 @@
     position: relative;
     z-index: 1;
     margin-left: 10px;
+    padding: 0;
+    width: auto;
+    background: none;
+    text-decoration: none !important;
   }
 
 }
