--- a/_dev/css/theme/_index.scss
+++ b/_dev/css/theme/_index.scss
@@ -1,6 +1,7 @@
 
 @import "vendors/index";
 @import "override/index";
+@import "utility/index";
 @import "base/index";
 @import "layout/index";
 @import "components/index";
