--- a/_dev/css/theme/components/_index.scss
+++ b/_dev/css/theme/components/_index.scss
@@ -1,5 +1,4 @@
 @import "product/index";
-@import "search/index";
 @import "customer/index";
 @import "menu/index";
 @import "404/index";
@@ -8,3 +7,4 @@
 @import "stores/index";
 @import "sitemap/index";
 @import "search/index";
+@import "page-loader/index";
