--- a/_dev/css/theme/override/bootstrap-touchspin/_bootstrap-touchspin.scss
+++ b/_dev/css/theme/override/bootstrap-touchspin/_bootstrap-touchspin.scss
@@ -1,35 +1,40 @@
 .bootstrap-touchspin {
-  display: inline-block;
-  width: auto;
-  input {
-    &:focus {
-      outline: none;
-    }
-    &.form-control,
-    &.input-group {
-      float: left;
-      width: 3rem;
-      height: $input-height;
-      padding: 0.175rem 0.5rem;
-      color: $gray-900;
-      background-color: #fff;
-      border: $input-btn-border-width solid $input-border-color;
+  border: $input-border-width solid $input-border-color;
+  border-radius: $border-radius;
+  overflow: hidden;
+  max-width: 100px;
+  > input {
+    max-width: 60px;
+    border:none;
+    box-shadow: none;
+    text-align: center;
+    font-weight: 700;
+    -moz-appearance: textfield;
+    padding: 0;
+    border-left: $input-border-width solid $input-border-color;
+    border-right: $input-border-width solid $input-border-color;
+
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
     }
   }
-  .input-group-btn-vertical {
-    float: left;
-    width: auto;
-    color: $gray-900;
-    .bootstrap-touchspin-up {
-      border-radius: 0;
-    }
-    .bootstrap-touchspin-down {
-      border-radius: 0;
-    }
-    i {
-      top: 0.0625rem;
-      left: 0.1875rem;
-      font-size: 0.9375rem;
-    }
+  .btn {
+    position: relative;
+    z-index: 2;
+    color: $input-color;
+    background-color: $white;
+    padding: 0;
+    text-align: center;
+    height: 100%;
+    display: block;
+    width: 1.8em;
+    border: 0;
+  }
+  .input-group-prepend,
+  .input-group-append {
+    display: block;
+    margin: 0;
   }
 }
