--- a/_dev/css/theme/override/bootstrap-touchspin/_bootstrap-touchspin.scss
+++ b/_dev/css/theme/override/bootstrap-touchspin/_bootstrap-touchspin.scss
@@ -31,6 +31,10 @@
     display: block;
     width: 1.8em;
     border: 0;
+
+    @include hf {
+      background: $gray-200;
+    }
   }
   .input-group-prepend,
   .input-group-append {
