Trasition only on product thumbs opacity

--- a/_dev/css/product/components/product-gallery/_product-thumbs.scss
+++ b/_dev/css/product/components/product-gallery/_product-thumbs.scss
@@ -3,7 +3,7 @@
   &__elem {
     opacity: .3;
     cursor: pointer;
-    transition: .3s ease;
+    transition: .3s ease opacity;
 
     &:focus,
     &:hover {
